test/expected/declare_ub.out
declare x as unsigned bool
        ^
9: error: "unsigned _Bool" is illegal for built-in type
